Added 2 new melee units, knight and goblin.

--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -5,7 +5,7 @@
             "PrefabName": "Tank",
             "GhostPrefabName": "TankGhost",
             "CardImageName": "Tank",
-            "ManaCost": 3,
+            "ManaCost": 2,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 100,
@@ -45,14 +45,14 @@
             "PrefabName": "FireballSpell",
             "GhostPrefabName": "FireballSpellGhost",
             "CardImageName": "Fireball",
-            "ManaCost": 3,
+            "ManaCost": 23,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 0,
             "AttackSpeed": 0,
             "MovementSpeed": 0,
             "DirectAttackDamage": 0,
-            "AreaAttackDamage": 100,
+            "AreaAttackDamage": 150,
             "AggroRange": 0,
             "AttackRange": 0,
             "IsBuilding": false,
@@ -65,7 +65,7 @@
             "PrefabName": "Tank2",
             "GhostPrefabName": "TankGhost2",
             "CardImageName": "Tank2",
-            "ManaCost": 6,
+            "ManaCost": 4,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 250,
@@ -131,7 +131,7 @@
             "StartHP": 100,
             "AttackSpeed": 1,
             "MovementSpeed": 5,
-            "DirectAttackDamage": 50,
+            "DirectAttackDamage": 30,
             "AreaAttackDamage": 0,
             "AggroRange": 20,
             "AttackRange": 3,
@@ -145,7 +145,7 @@
             "PrefabName": "SkellyArmy",
             "GhostPrefabName": "SkellyGhost",
             "CardImageName": "SkellyArmy",
-            "ManaCost": 4,
+            "ManaCost": 3,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 0,
@@ -185,7 +185,7 @@
             "PrefabName": "Turret",
             "GhostPrefabName": "TurretGhost",
             "CardImageName": "Turret",
-            "ManaCost": 4,
+            "ManaCost": 3,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 200,
@@ -197,6 +197,47 @@
             "AttackRange": 20,
             "IsBuilding": true,
             "AttacksUnits": true,
+            "IsProjectile": false,
+            "SpawnSeconds": 0
+        },
+        {
+            "Name": "Goblin",
+            "PrefabName": "Goblin",
+            "GhostPrefabName": "GoblinGhost",
+            "CardImageName": "Goblin",
+            "ManaCost": 2,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 300,
+            "AttackSpeed": 2,
+            "MovementSpeed": 3,
+            "DirectAttackDamage": 20,
+            "AreaAttackDamage": 0,
+            "AggroRange": 20,
+            "AttackRange": 3,
+            "IsBuilding": false,
+            "AttacksUnits": true,
+            "IsProjectile": false,
+            "SpawnSeconds": 0
+        },
+        
+        {
+            "Name": "Knight",
+            "PrefabName": "Knight",
+            "GhostPrefabName": "KnightGhost",
+            "CardImageName": "Knight",
+            "ManaCost": 5,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 600,
+            "AttackSpeed": 3,
+            "MovementSpeed": 2,
+            "DirectAttackDamage": 20,
+            "AreaAttackDamage": 0,
+            "AggroRange": 20,
+            "AttackRange": 3,
+            "IsBuilding": false,
+            "AttacksUnits": false,
             "IsProjectile": false,
             "SpawnSeconds": 0
         }
