--- a/Assets/Resources/Data/DeckConfig.json
+++ b/Assets/Resources/Data/DeckConfig.json
@@ -8,7 +8,9 @@
                 "SkellyHouse",
                 "Tank",
                 "Tank2",
-                "Turret"
+                "Turret",
+                "Goblin",
+                "Knight"
             ]
         }
     ]
