Added melee animations. Implemented the AttacksUnits flag, units no longer attack non-building entities when it's false.

--- a/Assets/Resources/Data/DeckConfig.json
+++ b/Assets/Resources/Data/DeckConfig.json
@@ -12,6 +12,19 @@
                 "Goblin",
                 "Knight"
             ]
+        },
+        {
+            "Name": "Tester",
+            "CardList": [
+                "Knight",
+                "Knight",
+                "Knight",
+                "Knight",
+                "Knight",
+                "Knight",
+                "Knight",
+                "Knight"
+            ]
         }
     ]
 }
