Added air unit support.  Balloon.

--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -15,8 +15,10 @@
             "AreaAttackDamage": 30,
             "AggroRange": 15,
             "AttackRange": 15,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -35,8 +37,10 @@
             "AreaAttackDamage": 900,
             "AggroRange": 20,
             "AttackRange": 20,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -55,8 +59,10 @@
             "AreaAttackDamage": 150,
             "AggroRange": 0,
             "AttackRange": 0,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": false,
+            "AttacksGroundUnits": false,
             "IsProjectile": true,
             "SpawnSeconds": 0
         },
@@ -75,8 +81,10 @@
             "AreaAttackDamage": 50,
             "AggroRange": 20,
             "AttackRange": 20,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -95,8 +103,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 25,
             "AttackRange": 25,
+            "IsAirUnit": false,
+            "AttacksAirUnits": true,
             "IsBuilding": true,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -115,8 +125,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 25,
             "AttackRange": 25,
+            "IsAirUnit": false,
+            "AttacksAirUnits": true,
             "IsBuilding": true,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -135,8 +147,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 20,
             "AttackRange": 3,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -155,8 +169,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 0,
             "AttackRange": 0,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": false,
+            "AttacksGroundUnits": false,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -175,8 +191,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 0,
             "AttackRange": 0,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": false,
+            "AttacksGroundUnits": false,
             "IsProjectile": false,
             "SpawnSeconds": 10
         },
@@ -195,8 +213,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 20,
             "AttackRange": 20,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": true,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -215,8 +235,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 20,
             "AttackRange": 5,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -236,8 +258,10 @@
             "AreaAttackDamage": 0,
             "AggroRange": 20,
             "AttackRange": 6,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
             "IsBuilding": false,
-            "AttacksUnits": false,
+            "AttacksGroundUnits": false,
             "IsProjectile": false,
             "SpawnSeconds": 0
         },
@@ -256,8 +280,32 @@
             "AreaAttackDamage": 0,
             "AggroRange": 15,
             "AttackRange": 15,
+            "IsAirUnit": false,
+            "AttacksAirUnits": true,
             "IsBuilding": false,
-            "AttacksUnits": true,
+            "AttacksGroundUnits": true,
+            "IsProjectile": false,
+            "SpawnSeconds": 4
+        },
+        {
+            "Name": "Balloon",
+            "PrefabName": "Balloon",
+            "GhostPrefabName": "BalloonGhost",
+            "CardImageName": "Balloon",
+            "ManaCost": 5,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 100,
+            "AttackSpeed": 1,
+            "MovementSpeed": 2,
+            "DirectAttackDamage": 30,
+            "AreaAttackDamage": 0,
+            "AggroRange": 15,
+            "AttackRange": 15,
+            "IsAirUnit": true,
+            "AttacksAirUnits": true,
+            "IsBuilding": false,
+            "AttacksGroundUnits": true,
             "IsProjectile": false,
             "SpawnSeconds": 4
         }
