Made turret attack air units.

--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -214,7 +214,7 @@
             "AggroRange": 20,
             "AttackRange": 20,
             "IsAirUnit": false,
-            "AttacksAirUnits": false,
+            "AttacksAirUnits": true,
             "IsBuilding": true,
             "AttacksGroundUnits": true,
             "IsProjectile": false,
