Added unit spawning projectile.

--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -73,6 +73,30 @@
             "WillWaitForSpawnCharge": false
         },
         {
+            "Name": "SkellyFlyersSpell",
+            "PrefabName": "SkellyFlyersSpell",
+            "GhostPrefabName": "FireballSpellGhost",
+            "CardImageName": "SkellyFlyersSpell",
+            "ManaCost": 4,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 0,
+            "AttackSpeed": 0,
+            "MovementSpeed": 0,
+            "DirectAttackDamage": 0,
+            "AreaAttackDamage": 150,
+            "AggroRange": 0,
+            "AttackRange": 0,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
+            "IsBuilding": false,
+            "AttacksGroundUnits": false,
+            "IsProjectile": true,
+            "ChildEntitySpawnSeconds": 0,
+            "SpawnChargeSeconds": 0,
+            "WillWaitForSpawnCharge": false
+        },
+        {
             "Name": "Tank2",
             "PrefabName": "Tank2",
             "GhostPrefabName": "TankGhost2",
@@ -173,7 +197,31 @@
             "PrefabName": "SkellyArmy",
             "GhostPrefabName": "SkellyGhost",
             "CardImageName": "SkellyArmy",
-            "ManaCost": 3,
+            "ManaCost": 7,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 0,
+            "AttackSpeed": 0,
+            "MovementSpeed": 0,
+            "DirectAttackDamage": 0,
+            "AreaAttackDamage": 0,
+            "AggroRange": 0,
+            "AttackRange": 0,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
+            "IsBuilding": false,
+            "AttacksGroundUnits": false,
+            "IsProjectile": false,
+            "ChildEntitySpawnSeconds": 0,
+            "SpawnChargeSeconds": 1,
+            "WillWaitForSpawnCharge": false
+        },
+        {
+            "Name": "SkellyFlyersArmy",
+            "PrefabName": "SkellyFlyersArmy",
+            "GhostPrefabName": "",
+            "CardImageName": "",
+            "ManaCost": 0,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 0,
