--- a/Assets/Resources/Data/DeckConfig.json
+++ b/Assets/Resources/Data/DeckConfig.json
@@ -4,7 +4,7 @@
             "Name": "Deck1",
             "CardList": [
                 "SkellyFlyersSpell",
-                "Fireball",
+                "FireballSpell",
                 "SkellyArmy",
                 "SkellyHouse",
                 "Tank",
