Added timed bomb.

--- a/Assets/Resources/Data/DeckConfig.json
+++ b/Assets/Resources/Data/DeckConfig.json
@@ -19,14 +19,14 @@
         {
             "Name": "Tester",
             "CardList": [
-                "SkellyFlyersSpell",
-                "SkellyFlyersSpell",
-                "SkellyFlyersSpell",
-                "SkellyFlyersSpell",
-                "SkellyFlyersSpell",
-                "SkellyFlyersSpell",
-                "SkellyFlyersSpell",
-                "SkellyFlyersSpell"
+                "Goblin",
+                "Goblin",
+                "Goblin",
+                "Goblin",
+                "Goblin",
+                "Goblin",
+                "Goblin",
+                "Goblin"
             ]
         }
     ]
