Added distributed placement for ghost armies.

--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -195,7 +195,7 @@
         {
             "Name": "SkellyArmy",
             "PrefabName": "SkellyArmy",
-            "GhostPrefabName": "SkellyGhost",
+            "GhostPrefabName": "SkellyArmyGhost",
             "CardImageName": "SkellyArmy",
             "ManaCost": 7,
             "PlacementWidth": 1,
