--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -386,8 +386,8 @@
             "WillWaitForSpawnCharge": true
         },
         {
-            "Name": "FireSpell",
-            "PrefabName": "FireSpell",
+            "Name": "PoisonEffect",
+            "PrefabName": "PoisonEffect",
             "GhostPrefabName": "",
             "CardImageName": "",
             "ManaCost": 0,
@@ -397,7 +397,7 @@
             "AttackSpeed": 1,
             "MovementSpeed": 0,
             "DirectAttackDamage": 0,
-            "AreaAttackDamage": 100,
+            "AreaAttackDamage": 15,
             "AggroRange": 0,
             "AttackRange": 0,
             "IsAirUnit": false,
@@ -405,6 +405,30 @@
             "IsBuilding": false,
             "AttacksGroundUnits": false,
             "IsProjectile": false,
+            "ChildEntitySpawnSeconds": 0,
+            "SpawnChargeSeconds": 0,
+            "WillWaitForSpawnCharge": false
+        },
+        {
+            "Name": "PoisonSpell",
+            "PrefabName": "PoisonSpell",
+            "GhostPrefabName": "PoisonSpellGhost",
+            "CardImageName": "PoisonSpell",
+            "ManaCost": 3,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 0,
+            "AttackSpeed": 0,
+            "MovementSpeed": 0,
+            "DirectAttackDamage": 0,
+            "AreaAttackDamage": 0,
+            "AggroRange": 0,
+            "AttackRange": 0,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
+            "IsBuilding": false,
+            "AttacksGroundUnits": false,
+            "IsProjectile": true,
             "ChildEntitySpawnSeconds": 0,
             "SpawnChargeSeconds": 0,
             "WillWaitForSpawnCharge": false
