--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -432,6 +432,30 @@
             "ChildEntitySpawnSeconds": 0,
             "SpawnChargeSeconds": 0,
             "WillWaitForSpawnCharge": false
+        },
+        {
+            "Name": "RageEffect",
+            "PrefabName": "RageEffect",
+            "GhostPrefabName": "RageSpellGhost",
+            "CardImageName": "RageEffect",
+            "ManaCost": 3,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 0,
+            "AttackSpeed": 0,
+            "MovementSpeed": 0,
+            "DirectAttackDamage": 0,
+            "AreaAttackDamage": 0,
+            "AggroRange": 0,
+            "AttackRange": 0,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
+            "IsBuilding": false,
+            "AttacksGroundUnits": false,
+            "IsProjectile": true,
+            "ChildEntitySpawnSeconds": 0,
+            "SpawnChargeSeconds": 0,
+            "WillWaitForSpawnCharge": false
         }
     ]
 }
