Animation and balance fixes. Enemy now has different deck.

--- a/Assets/Resources/Data/CardConfig.json
+++ b/Assets/Resources/Data/CardConfig.json
@@ -77,7 +77,7 @@
             "PrefabName": "SkellyFlyersSpell",
             "GhostPrefabName": "FireballSpellGhost",
             "CardImageName": "SkellyFlyersSpell",
-            "ManaCost": 4,
+            "ManaCost": 6,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 0,
@@ -101,7 +101,7 @@
             "PrefabName": "Tank2",
             "GhostPrefabName": "TankGhost2",
             "CardImageName": "Tank2",
-            "ManaCost": 4,
+            "ManaCost": 3,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 250,
@@ -197,7 +197,7 @@
             "PrefabName": "SkellyArmy",
             "GhostPrefabName": "SkellyArmyGhost",
             "CardImageName": "SkellyArmy",
-            "ManaCost": 7,
+            "ManaCost": 4,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 0,
@@ -293,13 +293,13 @@
             "PrefabName": "Goblin",
             "GhostPrefabName": "GoblinGhost",
             "CardImageName": "Goblin",
-            "ManaCost": 2,
+            "ManaCost": 3,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
-            "StartHP": 300,
-            "AttackSpeed": 2,
-            "MovementSpeed": 3,
-            "DirectAttackDamage": 20,
+            "StartHP": 150,
+            "AttackSpeed": 1,
+            "MovementSpeed": 5,
+            "DirectAttackDamage": 150,
             "AreaAttackDamage": 0,
             "AggroRange": 20,
             "AttackRange": 5,
@@ -312,7 +312,6 @@
             "SpawnChargeSeconds": 1,
             "WillWaitForSpawnCharge": true
         },
-        
         {
             "Name": "Knight",
             "PrefabName": "Knight",
@@ -338,11 +337,35 @@
             "WillWaitForSpawnCharge": true
         },
         {
+            "Name": "GiantSkeleton",
+            "PrefabName": "GiantSkeleton",
+            "GhostPrefabName": "GiantSkeletonGhost",
+            "CardImageName": "GiantSkeleton",
+            "ManaCost": 6,
+            "PlacementWidth": 1,
+            "PlacementHeight": 1,
+            "StartHP": 450,
+            "AttackSpeed": 3,
+            "MovementSpeed": 2,
+            "DirectAttackDamage": 30,
+            "AreaAttackDamage": 0,
+            "AggroRange": 20,
+            "AttackRange": 6,
+            "IsAirUnit": false,
+            "AttacksAirUnits": false,
+            "IsBuilding": false,
+            "AttacksGroundUnits": true,
+            "IsProjectile": false,
+            "ChildEntitySpawnSeconds": 0,
+            "SpawnChargeSeconds": 1,
+            "WillWaitForSpawnCharge": true
+        },
+        {
             "Name": "Necromancer",
             "PrefabName": "Necromancer",
             "GhostPrefabName": "NecromancerGhost",
             "CardImageName": "Necromancer",
-            "ManaCost": 5,
+            "ManaCost": 4,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 100,
@@ -366,7 +389,7 @@
             "PrefabName": "Balloon",
             "GhostPrefabName": "BalloonGhost",
             "CardImageName": "Balloon",
-            "ManaCost": 5,
+            "ManaCost": 3,
             "PlacementWidth": 1,
             "PlacementHeight": 1,
             "StartHP": 100,
