Typo on rage spell.

--- a/Assets/Resources/Data/DeckConfig.json
+++ b/Assets/Resources/Data/DeckConfig.json
@@ -22,7 +22,7 @@
                 "Necromancer",
                 "Balloon",
                 "GiantSkeleton",
-                "RageSpell",
+                "RageEffect",
                 "FireballSpell"
             ]
         },
