Latest lightmaps.  Removed generated asset that was too big for version control.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ sysinfo.txt
 Assets/VSCode/
 Assets/VSCode.meta
 Assets/Plugins/Android/Assets/
+Assets/Scenes/ClashScene/LightingData.asset
+Assets/Scenes/ClashScene/LightingData.asset.meta
