--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,16 @@ Assets/Scenes/ClashScene/Lightmap-4_comp_light.exr.meta
 Assets/Scenes/ClashScene/Lightmap-5_comp_dir.exr.meta
 Assets/Scenes/ClashScene/Lightmap-5_comp_light.exr.meta
 Assets/Scenes/ClashScene/ReflectionProbe-0.exr.meta
+Assets/Scenes/ClashScene/Lightmap-0_comp_dir.exr
+Assets/Scenes/ClashScene/Lightmap-0_comp_light.exr
+Assets/Scenes/ClashScene/Lightmap-1_comp_dir.exr
+Assets/Scenes/ClashScene/Lightmap-1_comp_light.exr
+Assets/Scenes/ClashScene/Lightmap-2_comp_dir.exr
+Assets/Scenes/ClashScene/Lightmap-2_comp_light.exr
+Assets/Scenes/ClashScene/Lightmap-3_comp_dir.exr
+Assets/Scenes/ClashScene/Lightmap-3_comp_light.exr
+Assets/Scenes/ClashScene/Lightmap-4_comp_dir.exr
+Assets/Scenes/ClashScene/Lightmap-4_comp_light.exr
+Assets/Scenes/ClashScene/Lightmap-5_comp_dir.exr
+Assets/Scenes/ClashScene/Lightmap-5_comp_light.exr
+Assets/Scenes/ClashScene/ReflectionProbe-0.exr
